# disk-indexer

./: devenv.nix  devenv.yaml
indexer/: Cargo.toml  devenv.nix  devenv.yaml  drives.toml
indexer/src/: main.rs
kubernetes/: k8s.elasticsearch.deployment.yml  k8s.elasticsearch.ingress.yml  k8s.elasticsearch.service.yml
